syntax = "proto3";

option csharp_namespace = "College.GrpcServer.Protos";

package addressserver;

import "google/protobuf/empty.proto";

service AddressBookServer {

  rpc AddAddress (AddAddressRequest) returns (AddAddressResponse);

  rpc AddAddressEnrollments (stream AddAddressRequest) returns (google.protobuf.Empty);

  rpc RetrieveAddressEnrollments (AddressEnrollmentRequest) returns (stream AddressEnrollmentResponse);
}

message AddAddressRequest {
  string name = 1;

  string studentId = 2;

  string fullAddress = 3;

  string enrollment = 4;

  string enrollmentStatus = 5;
}

message AddAddressResponse {
  string id = 1;

  string message = 2;
}

message AddressEnrollmentRequest {
	string studentId = 1;
}

message AddressEnrollmentResponse {
  string studentId = 1;

  string name = 2;
  
  string fullAddress = 3;
  
  string enrollment = 4;
  
  string enrollmentStatus = 5;
}
